# orgee-roam

./: .envrc  .flake8  .gitignore  .pylintrc  .python-version  README.md  pyproject.toml  setup.cfg
org/: main.org  tangle.org  template.org  testo.org
src/orgee_roam/: __init__.py  config.py  const.py  create_zettel.py  parse_logs.py  zettel.py  zettel0.py  zettel2.py  zettelkasten.py
src/orgee_roam/cache/: zettelkasten_cache.py
src/orgee_roam/zk_func/: dead_links.py  finder_zettel.py  list_zettel.py  make_zettel.py  normalize_links.py  update_cache.py
tests/: test_config.py
